Overlapping logo and menu fixed

--- a/app/assets/styles-sass/layout/_header.scss
+++ b/app/assets/styles-sass/layout/_header.scss
@@ -13,7 +13,7 @@
 }
 
 .page-heading {
-	@include position(absolute, 35px 0 0 $gutter);
+	@include position(absolute, 4*$gutter 0 0 $gutter);
 	height: 48px;
 	margin: 0;
 	padding-left: 60px;
@@ -39,7 +39,8 @@
 }
 
 .main-nav {
-	@include position(absolute, 50% $gutter 0 0);
+	@include position(absolute, 0 $gutter (-$gutter) 0);
+
 	font: {
 		weight: bold;
 	}
@@ -55,6 +56,8 @@
 	}
 
 	@media screen and (min-width: 960px){
-		right: 0px;
+		top: 50%;
+		right: 0;
+		bottom: auto;
 	}
 }
